2008-02-19  Ross Burton  <ross@openedhand.com>

	* applets/startup-notify/startup.c:
	Use an icon name which actually exists, and extend the default
	timeout.

2008-02-18  Ross Burton  <ross@openedhand.com>

	* applets/startup-notify/startup.c:
	Set the notification icon to the generic application icon for now.

2008-02-18  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Don't check for libnotify.

	* applets/Makefile.am:
	Build startup-notify if we have DBus.

	* applets/startup-notify:
	Don't use libnotify as it doesn't conform to the specification and
	makes blocking DBus calls.  Instead, call it directly.

2008-02-18  Ross Burton  <ross@openedhand.com>

	* applets/clock/clock.c:
	Don't set a colour in the code, let the theme style it.

2008-02-14  Ross Burton  <ross@openedhand.com>

	* configure.ac:
	Remove applets/battery/data/, argh.

2008-02-14  Ross Burton  <ross@openedhand.com>

	* applets/battery/data/:
	* applets/battery/battery.c:
	Don't use private icons, use the icon theme.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/Makefile.am:
	* applets/windowselector/Makefile.am:
	Don't try and install files I just deleted.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/showdesktop/showdesktop.c:
	Use "user-desktop" stock icon instead of custom icons.
	
	* applets/showdesktop/mb-applet-showdesktop-active.png:
	* applets/showdesktop/mb-applet-showdesktop.png:
	Delete.

2008-02-13  Ross Burton  <ross@openedhand.com>

	* applets/windowselector/windowselector.c:
	Use icons from the icon theme.
	
	* applets/windowselector/mb-applet-windowselector.png:
	Delete.

2008-02-12  Ross Burton  <ross@openedhand.com>

	* matchbox-panel/mb-panel-scaling-image.c:
	Reload the icon on size allocation.

2008-02-08  Ross Burton  <ross@openedhand.com>

	* applets/notify/mb-notification.[ch]:
	Subclass event box and emit a signal when clicked.
	
	* applets/notify/notify-store.[ch]:
	Add a reason argument to the public close method.
	