@@ -1,3 +1,8 @@
+2008-02-20  Ross Burton  <ross@openedhand.com>
+
+	* applets/notify/mb-notification.c:
+	Draw a shadow around the notification.
+
 2008-02-19  Ross Burton  <ross@openedhand.com>
 
 	* applets/startup-notify/startup.c:
